<resources>
    <string name="app_name">EmployabilityTracking</string>

    <string name="enter_your_details">Enter Your Details:</string>
    <string name="block">Block Number</string>
    <string name="Address">Address</string>
    <string name="City">City / Village / Town</string>
    <string name="District">District</string>
    <string name="Next">Next</string>


    <string name="enter_course_details1">Enter course details:</string>
    <string name="course_name">Course Name</string>
    <string name="test_centre">Test Centre Name</string>
    <string name="address_test_centre">Test Centre Address</string>
    <string name="city_of_test_centre">Test Centre City</string>
    <string name="Grade">Grade you achieved in the course</string>

    <string name="placement">Did they provide placement?</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>

    <string name="employer_name">Employer Name</string>
    <string name="period">Period of contract</string>
    <string name="probation">Probation offered</string>
    <string name="salary">Salary offered</string>
    <string name="enter_candidate_details">Enter candidate details</string>
    <string name="villagge_name">Villagge name</string>
    <string name="village_name">Village name</string>
    <string name="mandal">Mandal</string>
    <string name="residential_address">Residential Address</string>
    <string name="name_of_the_candidate">Name of the candidate</string>
    <string name="phone_number">Phone Number</string>
    <string name="are_you">Are you :</string>
    <string name="radiobutton">RadioButton</string>
    <string name="are_you1">ARE YOU</string>
    <string name="candidate">CANDIDATE</string>
    <string name="employer">EMPLOYER</string>
    <string name="enter_employer_details">Enter Employer Details</string>
    <string name="name_of_the_employer1">Name of the employer</string>
    <string name="aadhar_card_no">Aadhar Card NO.</string>
    <string name="address_of_the_center">Address of the center</string>
    <string name="clear1">CLEAR</string>
    <string name="did_they_provide_placement">Did they provide placement?</string>
    <string name="yes2">Yes</string>
    <string name="no2">No</string>
    <string name="are_you_self_employed">Are you self Employed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear">CLEAR</string>
    <string name="enter_course_details">Enter course details:</string>
    <string name="no_of_courses">No. of courses</string>
    <string name="for_courses">for courses</string>
    <string name="for_course_name">for course name</string>
    <string name="ak1">No.of courses</string>
    <string name="clear3">CLEAR</string>
    <string name="did_they_provide_placement1">Did they provide placement?</string>
    <string name="are_you_self_employed12">Are you self employed?</string>
    <string name="enter_the_following_details2">Enter the following details</string>
    <string name="name_of_the_employer">Name of the employer</string>
    <string name="trade">Trade</string>
    <string name="period_of_contract_in_years">Period of contract(in years)</string>
    <string name="status_of_employment">Status of Employment?</string>
    <string name="working">Working</string>
    <string name="not_working45">Not Working</string>
    <string name="enter_the_following_details">Enter the following details</string>
    <string name="reason_of_not_getting_the_job">Reason of not getting the job</string>
    <string name="skills_lacking">skills lacking</string>
    <string name="desired_skills">desired skills</string>
    <string name="fill_up_the_following_details">Fill up the following details</string>
    <string name="describe_your_job_experience">Describe your job experience</string>
    <string name="will_you_recommmend_the_skill_centre">Will you recommmend the skill centre?</string>
    <string name="ok">OK</string>
    <string name="reason_of_leaving_the_job">Reason of leaving the job</string>
    <string name="reason_of_getting_of_fired">Reason of getting of fired</string>
    <string name="work_experience">Work Experience</string>
    <string name="ok1">OK</string>
    <string name="reason_of_getting_fired">Reason of getting fired</string>
    <string name="currently_working">Currently working</string>
    <string name="not_working">Not Working</string>
    <string name="describe_your_experience">Describe your experience</string>
    <string name="reason_of_why_employment_didn_t_work">Reason of why employment didn\'t work</string>
    <string name="top_3_reason_for_selecting_the_candidate">Top 3 Reason for selecting the candidate</string>
    <string name="reason_no_1">Reason no.1</string>
    <string name="reason_no_2">Reason no. 2</string>
    <string name="reason_no_3">Reason no. 3</string>
    <string name="top_qualities_in_a_candidate_for_selecting">Top qualities in a candidate for selecting</string>
    <string name="write_down_atleast_two">write down atleast two</string>
    <string name="qu1">Write down atleast two</string>
    <string name="number_of_employed_candidates">Number of employed candidates</string>
    <string name="candidate_still_employed">Candidate still employed?</string>
    <string name="feedback_of_the_employer2">Feedback of the employer</string>
    <string name="feedback2">Feedback</string>
    <string name="reason_for_selecting_the_candidate">Reason for selecting the candidate</string>
    <string name="reason_for_firing_the_candidate">Reason for firing the candidate</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_of_the_employer">Feedback of the employer</string>
    <string name="reason_for_selecting_candidates">Reason for selecting candidates</string>
    <string name="are_you12">ARE YOU?</string>
    <string name="enter_employer_details1">Enter Employer Details</string>
    <string name="name">Name</string>
    <string name="pin_code">Pin code</string>
    <string name="ap8">Phone number</string>
    <string name="email_id">Email ID</string>
    <string name="save">Save</string>
    <string name="centre_name">Centre Name</string>
    <string name="centre_address">Centre Address</string>
    <string name="center_id">Center ID</string>
    <string name="did_skill_centre_help_you_find_self_employment">Did skill centre help you find self employment?</string>
    <string name="aadhar_card_no1">Aadhar Card No.</string>
    <string name="referral_code">Referral Code</string>
    <string name="entry_saved">Entry Saved</string>
    <string name="add_another">Add Another</string>
    <string name="write_here">write here..</string>
    <string name="enter_aadhar_card_no">Enter Aadhar Card NO.</string>
    <string name="enter_here">Enter here</string>
    <string name="check">Check</string>
    <string name="are_your_currently_employed_with_the_same_employer">Are your currently employed with the same employer?</string>
    <string name="p1">Are you currently employed?</string>
    <string name="are_you_self_employed1">Are you self employed?</string>
    <string name="yes3">Yes</string>
    <string name="reason_for_leaving_the_job">Reason for leaving the job</string>
    <string name="enter_details_of_the_new_job">Enter details of the new job</string>
    <string name="would_you_like_to_collaborate_with_other_skilling_programs">Would you like to collaborate with other skilling programs?</string>


</resources>
