<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelfEmpYES"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_up_the_following_details"
        android:textSize="36sp"/>

    <RadioGroup
        android:id="@+id/rgid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:paddingBottom="10sp"
            android:text="@string/did_skill_centre_help_you_find_self_employment"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/no" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20sp"
            android:text="@string/status_of_employment"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/rgid1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/ip23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currently_working" />

            <RadioButton
                android:id="@+id/ip24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/not_working" />

            <Button
                android:id="@+id/okid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="40dp"
                android:text="@string/ok" />
        </RadioGroup>
    </RadioGroup>

</LinearLayout>