<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Credentials" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/enter_candidate_details"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/editText27"
                style="@style/textviewMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_of_the_candidate"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/nameid"
                style="@style/textviewMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/village_name"
                android:inputType="textPersonName" />

            <AutoCompleteTextView
                android:id="@+id/addressid"
                style="@style/textviewMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/block"
                android:completionThreshold="1"

                android:inputType="textPersonName" />

            <AutoCompleteTextView
                android:id="@+id/cityid"
                style="@style/textviewMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/District"
                android:completionThreshold="1"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/districtid"
                style="@style/textviewMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/residential_address"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText"
                style="@style/textviewMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                style="@style/textviewMainActivity"
                android:inputType="phone"
                android:hint="@string/aadhar_card_no1" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                style="@style/textviewMainActivity"
                android:hint="@string/referral_code"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Next" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>