<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".placementnofeed">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_following_details"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/editText15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/reason_of_not_getting_the_job"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/editText16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/skills_lacking"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editText17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/desired_skills"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/okid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="40dp"
        android:text="@string/ok" />
</LinearLayout>