<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NWorking" >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_up_the_following_details"
        android:textSize="36sp"/>

    <EditText
        android:id="@+id/editText18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/reason_of_leaving_the_job"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/editText19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/reason_of_getting_fired"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editText20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/work_experience"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/okid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok1"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="300dp"
        />
</LinearLayout>