<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".after3months1">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_following_details"
        android:gravity="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_your_currently_employed_with_the_same_employer"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/antic"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes1"
            android:layout_marginTop="20sp"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginTop="10sp"/>



        <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p1"
                android:textSize="20sp"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/antic"
                />


                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_marginTop="20dp"/>

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginTop="10dp"/>



        <TextView
                        android:id="@+id/textView29"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/are_you_self_employed1"
                        android:textSize="20sp"
                        android:layout_marginTop="20sp"
                        android:fontFamily="@font/antic"/>



                        <RadioButton
                            android:id="@+id/radioButton11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/yes3"
                            android:layout_marginTop="20sp"/>

                        <RadioButton
                            android:id="@+id/radioButton12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no"
                            android:layout_marginTop="10sp"/>

                        <Button
                            android:id="@+id/button5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Next"
                            android:layout_marginTop="10dp"/>
                    </RadioGroup>
                </LinearLayout>



